--- a/FootballMatchPredictor.Domain/FootballMatchPredictor.Domain.csproj
+++ b/FootballMatchPredictor.Domain/FootballMatchPredictor.Domain.csproj
@@ -1,13 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Middlewares\" />
+    <Folder Include="Interfaces\Services\" />
+    <Folder Include="Interfaces\Validators\" />
   </ItemGroup>
 
 </Project>
