--- a/FootballMatchPredictor/FootballMatchPredictor.csproj
+++ b/FootballMatchPredictor/FootballMatchPredictor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,6 +16,10 @@
     <ProjectReference Include="..\FootballMatchPredictor.Application\FootballMatchPredictor.Application.csproj" />
     <ProjectReference Include="..\FootballMatchPredictor.Domain\FootballMatchPredictor.Domain.csproj" />
     <ProjectReference Include="..\FootballMatchPredictor.Persistence\FootballMatchPredictor.Persistence.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
