Добавил аутентификацию и авторизацию

--- a/FootballMatchPredictor.Application/FootballMatchPredictor.Application.csproj
+++ b/FootballMatchPredictor.Application/FootballMatchPredictor.Application.csproj
@@ -7,10 +7,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DependencyInjection\" />
-    <Folder Include="Resources\" />
-    <Folder Include="Services\" />
+    <Folder Include="Resources\Success\" />
     <Folder Include="Validations\" />
   </ItemGroup>
-	
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\FootballMatchPredictor.Domain\FootballMatchPredictor.Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Resources\Error\ErrorMessage.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>ErrorMessage.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Resources\Error\ErrorMessage.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>ErrorMessage.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
+
 </Project>
