--- a/FootballMatchPredictor.Application/FootballMatchPredictor.Application.csproj
+++ b/FootballMatchPredictor.Application/FootballMatchPredictor.Application.csproj
@@ -8,7 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
+	      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />	  
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />	  
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.1" />	  
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.1" />	  
+    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
 	<ItemGroup>
